# Recyclable-Classifier-WB

./: README.md  main.py  pyproject.toml  sweep.yaml
csci508_final/: __init__.py  load_data.py  model_selection.py  train_test_model.py
csci508_final/Images/: README.md
csci508_final/Images/TRAINING_&_TEST/: README.md
csci508_final/Images/TRAINING_&_TEST/TRAINING_&_TEST_IMAGES/: README.md
csci508_final/architectures/: model_loader.py  resnet18.py  resnet34.py  resnet50.py  resnet50modnet.py
csci508_final/saved_models_and_results/: README.md
csci508_final/saved_models_and_results/saved_models/: README.md
csci508_final/saved_models_and_results/saved_results/: README.md
