[tool.poetry]
name = "csci508-final"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.1"
opencv-python = "^4.2.0"
torch = "^1.4.0"
torchvision = "^0.5.0"
pathlib = "^1.0.1"
argparse = "^1.4.0"
scikit-image = "^0.16.2"
h5py = "^2.10.0"
wandb = "^0.10.12"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
